<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textSignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmEmail">


    <TextView
        android:id="@+id/textEnterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_verify_your_email"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginBottom="516dp"
        android:onClick="callResendCode"
        android:background="@color/Orange"
        android:textColor="@color/white"
        android:text="@string/resend_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.052" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:background="@color/Orange"
        android:text="@string/SignIn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>