<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textStyle="bold"

        android:text="@string/SignUp"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="294dp"
        android:layout_height="41dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="6dp"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="textPersonName"
        android:textColor="@color/Gray"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastnameTV" />

    <TextView
        android:id="@+id/firstnameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/FirstName"
        android:textColor="@color/OrangeSalmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchCompatone" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="294dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        android:textColor="@color/Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameTV" />

    <TextView
        android:id="@+id/lastnameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="1dp"
        android:text="@string/LastName"
        android:textColor="@color/OrangeSalmon"
        app:layout_constraintBottom_toTopOf="@+id/lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <EditText
        android:id="@+id/email"
        android:layout_width="294dp"
        android:layout_height="41dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="71dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/example_email_com"
        android:inputType="textPersonName|textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#A8A8A8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/company"
        android:layout_width="116dp"
        android:layout_height="23dp"
        android:layout_marginTop="7dp"
        android:text="@string/companyCode"
        android:textColor="@color/OrangeSalmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textViewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/Password"
        android:textColor="@color/OrangeSalmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyinfo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/companyinfo"
        android:layout_width="295dp"
        android:layout_height="41dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="@string/companyCode"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company" />

    <EditText
        android:id="@+id/password"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="73dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPass" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="330dp"
        android:text="@string/Email"
        android:textColor="@color/OrangeSalmon"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname" />

    <CheckBox
        android:id="@+id/termscheckBox"
        android:layout_width="266dp"
        android:layout_height="47dp"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="11dp"
        android:text="@string/ifStat"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.978" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/Orange"
        android:text="@string/SignUp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCompatone"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="Swith To Employee"
        android:textColor="@color/OrangeSalmon"
        android:textSize="20dp"
        android:thumb="@drawable/thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:track="@drawable/track" />


</androidx.constraintlayout.widget.ConstraintLayout>
